# job-hunter-parser

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .~lock.web3_jobs.csv#  README.md  config.toml  docker-compose.yml  pyproject.toml
app/entrypoints/api/: server.py
app/entrypoints/api/firefox_extension/: manifest.json
app/entrypoints/cli/: __init__.py  main.py  migrate.py  pipeline.py  qa.py  user.py
app/infra/: config.py
app/infra/db/: __init__.py  alembic.ini  engine.py
app/infra/db/migrations/: env.py
app/infra/db/orm/: __init__.py  applies.py  companies.py  people.py
app/infra/db/tables/: __init__.py  applies.py  companies.py  form_answers.py  people.py  users.py
app/modules/admin/: __init__.py
app/modules/admin/models/: __init__.py
app/modules/admin/ports/: admin_uow.py
app/modules/applies/: __init__.py
app/modules/applies/adapters/: __init__.py  llm_anthropic.py  llm_base.py  llm_gemini.py  llm_groq.py  orm.py  sqla_repository.py
app/modules/applies/models/: __init__.py  apply.py
app/modules/applies/ports/: __init__.py  applies_uow.py  apply_journal.py  candidates.py  llm.py  mass_apply.py  qa_cache.py  repository.py  unit_of_work.py
app/modules/applies/services/: __init__.py  answer_questions.py  curate.py  qa_cache.py  score.py
app/modules/automation/: __init__.py
app/modules/automation/adapters/: api_server.py  camoufox.py  firefox_cookies.py  linkedin_easy_apply.py  linkedin_outreach.py  page_filler.py  selenium_bot.py
app/modules/automation/ports/: external_apply.py
app/modules/automation/services/: easy_apply_orchestrator.py  page_filler.py  selenium_orchestrator.py  send_orchestrator.py
app/modules/companies/: __init__.py
app/modules/companies/adapters/: __init__.py  orm.py
app/modules/companies/models/: __init__.py  company.py  job_posting.py  search_criteria.py
app/modules/companies/ports/: __init__.py  companies_uow.py  company_directory.py  job_enrichment.py  repository.py  scraper.py
app/modules/companies/services/: email_extract.py  job_enrich.py
app/modules/people/: __init__.py
app/modules/people/adapters/: __init__.py  apify.py  orm.py  theorg.py
app/modules/people/models/: __init__.py  decision_maker.py
app/modules/people/ports/: __init__.py  search.py
app/modules/users/: __init__.py
app/modules/users/models/: __init__.py  candidate_profile.py  user.py
app/modules/users/ports/: __init__.py  accounts.py  repository.py  (+1 more)
app/shared/: __init__.py  candidate_profile.py  search_criteria.py
config/: settings.py
docs/: PROJECT_STRUCTURE.md  ROADMAP.md
firefox-extension/: background.js  content_script.js  external_fill.js  manifest.json  popup.html  popup.js
scripts/: diag_rippling_typeahead.py  diagnose_apply_buttons.py  dump_iframe.py  dump_job_page.py  dump_modal.py  dump_shadow.py  insert_letters.py  lint_arch.py  login_camoufox.py  show_letter.py  show_letter.sh  test_apply_one.py  test_camoufox_aalyria.py  test_camoufox_apply.py  test_direct_url.py  test_extension_fill.py
src/: cli.py  config.py  pipeline.py  shared.py
src/automation/: __init__.py  api_server.py  browser.py  easy_apply_orchestrator.py  firefox_cookies.py  linkedin_easy_apply.py  linkedin_outreach.py  llm_pool.py  selenium_bot.py  selenium_orchestrator.py  send_orchestrator.py
src/companies/: __init__.py  email_extract.py  job_enrich.py  models.py  ports.py
src/companies/domain/: company.py  job_posting.py
src/companies/scrapers/: linkedin.py  remoteok.py  rustjobs.py  web3career.py
src/domain/entities/: company.py  decision_maker.py  job_posting.py  lead.py  outreach_message.py
src/domain/services/: lead_scorer.py
src/domain/value_objects/: email.py  seniority.py  tech_stack.py
src/leads/: db.py  models.py  ports.py  repo.py  scorer.py
src/leads/domain/: lead.py  lead_scorer.py
src/messages/: __init__.py  curator.py  db.py  llm.py  llm_base.py  llm_gemini.py  llm_groq.py  models.py  ports.py  repo.py  scorer.py
src/outreach/: llm.py  ports.py
src/people/: __init__.py  models.py  ports.py
src/people/adapters/: apify.py  apollo.py  email_guesser.py  theorg.py
src/people/domain/: decision_maker.py
src/presentation/cli/: main.py
src/shared/: __init__.py  candidate_profile.py  search_criteria.py
src/shared/kernel/: linkedin_url.py
tests/: test_leads_scorer.py  test_lint_arch.py  test_shared_email.py  test_shared_tech_stack.py
tests/domain/: test_email.py  test_lead_scorer.py  test_tech_stack.py
(+62 files in other folders)
