[project]
name = "job-hunter-parser"
version = "0.1.0"
description = "Multi-channel job hunting parser with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sergey Sergeev", email = "serzhserg98@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    # Core
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "dishka>=1.4.0",

    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",

    # Async HTTP
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Scraping
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",

    # Persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # LLM
    "anthropic>=0.42.0",

    # Export
    "gspread>=6.1.0",
    "google-auth>=2.37.0",

    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[project.scripts]
jhp = "presentation.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "B", "C4", "UP", "ARG", "SIM", "TCH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
